css/style.css
/* #region.commons */

/* # CSS reset */
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  width: 512px;
  margin: 0 auto;
  background-color: #f0f8ff;
}

/* #endregion.commons */

/* #region#site-header */

#site-header {
  height: 270px;
  background-image: url(../img/banner.png);
  background-size: cover;
}

/* #endregion#site-header */

/* #region.main-content */

.main-content {
  background-color: #1a1d7a;
  padding: 0 30px;
}

/* #region.cards */
.cards {
  /* background-color: #5d64d1; SOSTITUITO CON GRADIENTE X BONUS */
  background-image: linear-gradient(to bottom, #2E3084, #5460E8);
  color: #fff;
  font-family: "DM Sans", sans-serif;
  font-size: 1.1rem;
  font-weight: 600;
  width: 100%;
  padding: 60px 30px;
  margin: 60px 0;
  border-radius: 30px;
  position: relative;
}

.first-card {
  margin-top: 0;
  padding-top: 120px;
}

/* Elements overflowing from cards */
.cards-overflow {
  height: 100px;
  position: absolute;

  /* sposta al centro le icone-overflow */
  top: 0px;
  transform: translate(50%, -50%);
}

/* h2 personalizzato */
.cards>h2 {
  font-family: "Sigmar", sans-serif;
  font-size: 2.2rem;
  text-transform: uppercase;
  letter-spacing: 1px;
  line-height: 2.2rem;
  padding-bottom: 15px;
}

.cards>p {
  padding-bottom: 15px;
}

/* box interno alla card (img, buttons...) */
.cards-no-text-contents {
  max-width: 100%;
  border-radius: 30px;
  position: relative;
}

/* card con img pink */
/* SO CHE NON VA BENE IDENTIFICARE CON I COLORI */
/* MA QUI I TESTI SONO TUTTI UGUALI */
#pink-img-card {
  max-width: 100%;
  /* height: 300px;
    background-image: url(../img/discord_demo.png);
    background-size: contain;
    background-repeat: no-repeat; */

  /* Commentate le vecchie regole, aggiungo quelle per il video */
  height: 290px;
  object-fit: cover;
  z-index: 0;
}

/* Video */
#video-pink {
  border-radius: 30px;
  max-width: 100%;
}

/* card con img green */
#green-img-card {
  max-width: 100%;
  /* background-image: url(../img/streamer_demo.png);
      height: 300px;
      background-size: contain;
      background-repeat: no-repeat; */

  /* Commentate le vecchie regole, aggiungo quelle per il video */
  height: 290px;
  object-fit: cover;
  z-index: 0;
}

/* Video */
#video-green {
  border-radius: 30px;
  max-width: 100%;
}

/* card con i bottoni */
.cards-type-botton {
  background-color: transparent;
  background-image: none;
  text-align: center;
  padding-bottom: 15px;
}

button {
  font-size: 1.3rem;
  border: none;
  border-radius: 15px;
  width: 100%;
  padding: 15px 0;
}

.download-botton {
  color: black;
  background-color: #fff;
  margin-bottom: 15px;
}

.open-botton {
  color: white;
  background-color: #5865f2;
}

/* #endregion.cards */

/* #endregion.main-content */

